# tmdb_api_demo

./: README.md  pyproject.toml  settings.py
tests/: conftest.py  test_account.py  test_discover.py  test_setup.py
tmdb/: account.py
tmdb/models/: base.py  media.py
